--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -1,2 +1,139 @@
+@import "partials/setup";
+@import "partials/variables";
+@import "partials/header";
+@import "partials/welcome";
+@import "partials/featured";
+@import "partials/arrivals";
+@import "partials/video";
+@import "partials/blog";
+@import "partials/vintage";
+@import "partials/about";
+@import "partials/contact";
+@import "partials/footer";
 
+:root {
+	font-size: 16px;
+}
+
+body {
+	font-family: $mainFont;
+}
+
+.midWidthWrapper {
+	max-width: 1175px;
+	width: 90%;
+}
+
+.welcome, .featured, .arrivals, .video, .blog, .vintage, .advert, .breadcrumbs, .services, .testimonials, .contactInfo, footer {
+	display: flex;
+	justify-content: center;
+
+	h2 {
+		font-size: 1.875rem;
+		font-weight: 400;
+		text-transform: uppercase;
+		letter-spacing:0.05em;
+		text-align: center;
+		padding: 120px 0 10px 0;
+	}
+}
+
+.activeLink {
+	color: $green;
+}
+
+@media (max-width: 1200px) {
+	.welcome, .featured, .arrivals, .video, .blog, .vintage, .advert, .breadcrumbs, .services, .testimonials, .contactInfo, footer {
+		h2 {
+			padding-top: 70px;
+		}
+	}
+}
+
+@media (max-width: 885px) {
+	.welcome, .featured, .arrivals, .video, .blog, .vintage, .advert, .breadcrumbs, .services, .testimonials, .contactInfo, footer {
+		h2 {
+			padding-top: 70px;
+		}
+	}
+}
+
+// @import "partials/setup";
+// @import "partials/variables";
+// @import "partials/buttons";
+// @import "partials/header";
+// @import "partials/about";
+// @import "partials/featured";
+// @import "partials/newArrivals";
+// @import "partials/banner";
+// @import "partials/blog";
+// @import "partials/clients";
+// @import "partials/footer";
+
+
+// html {
+// 	font-size: 10px;
+// }
+
+// h1 {
+// 	visibility: hidden; 
+// 	position: absolute;
+// 	top: 9999999999;
+// }
+
+// h2 {
+// 	margin: 0;
+// 	font-family: $bodyFont;
+// 	font-size: 3rem;
+// 	letter-spacing: 2px;
+// 	text-transform: uppercase;
+// 	text-align: center;
+// }
+
+// h3 {
+// 	font-family: $bodyFont;
+// }
+
+// section {
+// 	font-family: $bodyFont;
+// 	padding: 115px 0;
+// 	@media (max-width: 940px) {
+// 		padding: 100px 0;
+// 	}
+// }
+
+// button {
+// 	font-family: $bodyFont;
+// }
+
+// ul {
+// 	padding: 0;
+// 	margin: 0;
+// 	list-style-type: none;
+// }
+
+// .flex {
+// 	display: flex;
+// 	flex-direction: column;
+// }
+
+// .wrapper {
+// 	max-width: 1920px;
+// 	margin: 0 auto;
+// }
+
+// .contentWrapper {
+// 	max-width: 1170px;
+// 	margin: 0 auto;
+
+// 	@media (max-width: 1240px) {
+// 		max-width: 90%;
+// 		margin: 0 auto;
+// 	}
+
+// 	@media (max-width: 1170px) {
+// 		max-width: 80%;
+// 		margin: 0 auto;
+// 	}
+// }
 
