--- a/dev/styles/partials/_about.scss
+++ b/dev/styles/partials/_about.scss
@@ -1,273 +1,261 @@
-.title { 
-	background: linear-gradient(rgba(128, 160, 93, 0.7), rgba(128, 160, 93, 0.7)), url('../../assets/plants_banner.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
+/* -------------- */
 
-	h2 { 
-		font-size: 2.5625rem;
-		color: white;
-		text-transform: uppercase;
-		text-align: center;
-		font-weight: 400;
-		padding: 120px 0;
-	}
+/* about-us.html */
+
+
+/* HEADER */
+/* banner: about us */
+.banner {
+  background: linear-gradient(rgba(128,160,93,0.8), rgba(128,160,93,0.8)), url('../../assets/plants_wide.jpg');
+  background-size:cover;
+  background-position:center;
+  background-attachment:fixed;
+  padding:50px 0;
+  color:white;
+  text-align:center;
 }
 
-.breadcrumbs {
-	border: 1px solid #efefef;
-	margin-bottom: 70px;
-
+nav.page-flow {
+	width:100%;
+	background:white;
+	border-bottom:1px solid #f1f1f1;
 	ul {
-		font-size: 0.875rem;
-		padding: 30px 0;
-	}
+		padding:10px 0px;
+		display: flex;
 
-	li {
-		list-style-type: none;
-		display: inline-block;
+		li {
+			list-style:none;
+			padding:5px 10px;
+		}
 	}
-
-	li:nth-child(1):after {
-		content: '>';
-		padding: 0 35px;
+	a {
+		color:#2b2b2b;
+		text-decoration:none;
+		transition:color 0.3s ease-in;
+		&:hover {
+			color:#80a05d;
+		}
 	}
 }
 
-//advertisement
 
-.advertImage {
-	position: relative;
-
+/* VISUAL QUOTE */
+section.visual-quote {
+	padding:50px 0 0 0;
+	background:white;
 	img {
 		width: 100%;
 	}
-
-	blockquote {
-		width: 785px;
-		position: absolute;
-		left: 40px;
-		bottom: 40px;
-		background-color: white;
-		padding: 30px;
-
-		h3 {
-			font-size: 1.75rem;
-			letter-spacing: 0.025em;
-			color: $green;
-			font-weight: 400;
-			text-decoration: underline;
-		}
+	.wrapper {
+		position:relative;
 	}
 }
 
-// services 
 
-.services { 
-	border: 2px solid #ededed;
+
+.quote p{
+	background:white;
+	padding:25px;
+	color:#80a05d;
+	font-size:2rem;
+	font-weight:300;
+	text-decoration:underline;
+	width:70%;
+	position:absolute;
+	bottom:4%;
+	left:2.5%;
 }
 
-.servicesWrapper { 
-	display: flex;
-	flex-direction: row;
-}
 
-.servicesItem {
-	width: 25%;
-	text-align: center;
-	border-left: 1px solid white;
-	border-right: 1px solid white;
-
-	h3 {
-		text-transform: uppercase;
-		font-weight: 400;
-		letter-spacing: 0.07em;
-		color: $green;
-		font-size: 1.125rem;
-		padding-top: 20px;
-	}
-
-	p {
-		font-style: 0.875rem;
-		color: $pgrey;
-		line-height: 18px;
-		padding-bottom: 155px;
-	}
-
-	img {
-		padding-top: 120px;
-	}
-}
-
-.servicesItem:nth-child(1) {
-	background-image: url('../../images/bg_logo_left.png');
-}
-
-.servicesItem:nth-child(1):hover, .servicesItem:nth-child(2):hover, .servicesItem:nth-child(3):hover, .servicesItem:nth-child(4):hover {
-	background-image: linear-gradient(rgba(217, 222, 85, 0.8), rgba(217, 222, 85, 0.8)), url('../../images/hoverflowers.jpg');
-	background-size: cover;
-	background-position: center;
+/* PERKS */
+section.perks {
+	margin:0;
+	padding:0;
 	
-	h3, p {
-		color: white;
+	.wrapper {
+		display:flex;
+		flex-flow:row wrap;
 	}
 }
 
-.servicesItem:nth-child(2), .servicesItem:nth-child(3) {
-	background-color: $greysection;
-}
-
-.servicesItem:nth-child(4) { 
-	background-image: url('../../images/bg_logo_right.jpg');
-	background-position: bottom;
-}
- 
-//testimonials
-.testimonials { 
-	background: linear-gradient(rgba(193, 192, 192, 0.4), rgba(193, 192, 192, 0.4)), url('../../images/flower_pots.jpeg');
-	background-size: cover;
-	background-position: center -480px;
-	flex-direction: column;
-	align-items: center;
-
-	blockquote {
-		width: 80%;
-		max-width: 1175px;
-		text-align: center;
-		padding: 140px 0;
-	}
-
-	blockquote h3 {
-		font-size: 2.25rem;
-		font-style: italic;
-		font-weight: 300;
-		color: white;
-		letter-spacing: 0.05em;
-	}
-
-	blockquote p { 
-		color: white;
-	}
-	
-	blockquote p:nth-child(2) { // author's name
-		text-transform: uppercase;
-		font-size: 1.25rem;
-		background-color: #252525;
-		width: 230px;
-		padding: 5px 10px;
-		letter-spacing: 0.05em;
-		font-weight: 400;
-		margin: 20px auto 0 auto;
-	}
-}
-
-.instagramGallery { 
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	position: relative;
-	overflow: hidden;
-	font-size: 0;
-}
-
-.instagramFollowWrap { 
-	display: flex;
-	align-items: center;
-	max-width: 1175px;
-	width: 90%;
-	position: absolute;
-	top: 0;
-	left: 50%;
-	transform: translateX(-50%);
-}
-
-.instagramFollow {
-	background-color: black;
-
-	h4 { 
-		text-transform: uppercase;
-		font-size: 0.875rem;
-		font-weight: 300;
-		color: #dddddd;
-		padding: 5px 10px;
-	}
-}
-
-@media (max-width: 1220px) {
-	.testimonials {
-		blockquote {
-			padding: 80px 0;
-		}
-	}
-}
-
-@media (max-width: 960px) {
-	.advertImage {
-		blockquote {
-			max-width: 400px;
+.perk-item {
+	width:calc(100% / 4);
+	background:#f5f5f5;
+	padding:100px 25px;
+	text-align:center;
+	&:first-child {
+		background:url('../../assets/bg_logo_left.png');
+		background-size:cover;
+		background-position:center;
+		&:hover {
+			background: linear-gradient(rgba(218,222,86,0.8), rgba(218,222,86,0.8)), url('../../assets/bg_logo_left.png');
+			background-size:cover;
+			background-position:center;
+			color:white;
 		}
 	}
 
-	.servicesItem {
+	&:last-child {
+		background:url('../../assets/bg_logo_right.jpg');
+		background-size:cover;
+		background-position:center;
+		&:hover {
+			background: linear-gradient(rgba(218,222,86,0.8), rgba(218,222,86,0.8)), url('../../assets/bg_logo_right.jpg');
+			background-size:cover;
+			background-position:center;
+			color:white;
+		}
+	}
+
+	&:hover {
+		background: linear-gradient(rgba(218,222,86,0.9), rgba(218,222,86,0.9)), url('../../assets/hover_image.jpg');
+		background-size:cover;
+		background-position:center;
+		color:white;
 		p {
-			padding: 20px 20px 80px 20px;
-		}
-	}
-
-	.blogWrapperContent{
-		padding-bottom: 60px;
-	}
-}
-
-@media(max-width: 850px) {
-	.testimonials {
-		blockquote h3 {
-			font-size: 1.85rem;
+			color:white;
 		}
 	}
 }
 
-@media (max-width: 780px) {
-	.servicesWrapper { 
-		flex-direction: row;
-		flex-wrap: wrap;
-	}
+svg {
+	max-height:40px;
+	fill:#2b2b2b;
+}
 
-	.servicesItem {
-		width: 50%;
-		border: 1px solid white;
+.perk-item:hover svg {
+	fill:white;
+}
+
+
+/* TESTIMONIALS */
+section.testimonial {
+	background: linear-gradient(rgba(37,37,37,0.5), rgba(37,37,37,0.5)), url('../../assets/flower_pots.jpg');
+	background-size:cover;
+	background-position:center;
+	background-attachment:fixed;
+	text-align:center;
+	color:white;
+}
+
+.johnson-frankie {
+	display:inline-block;
+	background:#252525;
+	padding:5px 25px;
+	font-size:1.2rem;
+	text-transform:uppercase;
+
+}
+
+
+/* INSTAGRAM */
+section.instagram {
+	padding:0;
+	margin:0;
+	position: relative;
+
+	display:flex;
+	flex-flow:row wrap;
+}
+
+.instagram .wrapper {
+	position:absolute;
+}
+
+.instagram img {
+	flex:0 1 auto;
+	width:calc(100% / 8);
+	height: 100%;
+}
+
+a.instagram-link {
+	display: inline-block;
+	background:#252525;
+	color:white;
+	font-size:1.2rem;
+	text-transform:uppercase;
+	text-decoration:none;
+	padding:5px 10px;
+	transition:background 0.3s ease-in;
+	&:hover {
+		background:#80a05d;
 	}
 }
 
-@media (max-width: 700px) {
-	.advertImage {
-		blockquote {
-			width: calc(100% - 60px);
-			top: 10px;
-			left: 10px;
-			background-color: transparent;
 
-			h3 {
-				font-size: 1.3rem;
-				color: $bggrey;
-			}
+/* hi-res laptops and desktops */ 
+@media (max-width:1281px) { 
+
+}
+
+/* big landscape tablets, laptops, and desktops */ 
+@media (max-width:1025px) { 
+
+}
+
+
+/* tablet, landscape iPad, lo-res laptops ands desktops */ 
+@media (max-width:961px) { 
+
+	.perk-item {
+		width:calc(100% / 2);
+		padding:50px;
+	}
+	
+}
+
+/* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 
+@media (max-width:641px) { 
+	.banner {
+		background-attachment: scroll;
+	}
+
+	.instagram img {
+		width:calc(100% / 4);
+	}
+
+}
+
+/* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
+@media (max-width:481px) { 
+
+	/* VISUAL QUOTE */
+	.quote p{
+		background:rgba(255,255,255,0.8);
+		padding:25px;
+		margin:0;
+		font-size:1.6rem;
+		width:100%;
+		height:100%;
+		top:0;
+		left:0;
+	}
+
+
+	/* PERKS */
+	section.perks {
+		.wrapper {
+			flex-flow:column wrap;
 		}
 	}
-}
 
-@media (max-width: 500px) {
-	.testimonials {
-		blockquote h3 {
-			font-size: 1.5rem;
+	.perk-item {
+		width:calc(100%);
+	}
+
+	section.testimonial {
+		background-attachment:scroll;
+		h1 {
+			font-size: 2rem;
 		}
-	}
-
-	.servicesWrapper {
-		flex-direction: column;
-	}
-
-	.servicesItem {
-		width: 100%;
+		
 	}
 
 }
+
+/* smartphones, iPhone, portrait 480x320 phones */ 
+@media (max-width:320px) { 
+
+
+}
+
