--- a/dev/styles/partials/_footer.scss
+++ b/dev/styles/partials/_footer.scss
@@ -1,113 +1,182 @@
-footer { 
-	background-color: #292a29;
-	background-image: url('../../images/footer_bg.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: right;
+/* FOOTER */
+footer {
+	padding:100px 0px;
+	background:url('../../assets/footer_bg.jpg');
+	background-size:cover;
+	background-position:center;
+	color:white;
+	text-align:center;
+	.wrapper {
+		display: flex;
+		flex-flow:row wrap;
+	}
 }
 
-.footerWrapper {
-	display: flex;
-	flex-direction: row;
+.footnote {
+	width:calc(100% / 3 - 10px);
+	margin:0 5px;
+	
+	h5 {
+		margin:0 0 50px 0;
+	}
+
+	a {
+		font-size:1.2rem;
+		color:#8f8f8f;
+		text-decoration:none;
+		transition:color 0.3s ease-in;
+		&:hover {
+			font-size:1.2rem;
+			color:#dade56;
+		}
+	}
 }
 
-.footerColumn {
-	width: 33.3%;
-	text-align: center;
-	padding: 125px 0;
 
-	h3 { // footer titles 
-		color: white;
-		text-transform: uppercase;
-		border-bottom: 1px solid #343434;
-		padding-bottom: 20px;
-		font-weight: 600;
-		letter-spacing: 0.02em;
-	}
 
-	p {
-		color: $footergrey;
-		padding: 0px 50px 0px 50px;
-		font-size: 0.9375rem;
-	}
 
-	ul { 
-		color: $footergrey;
-		padding: 0;
-	}
+/* about us */
+ul.social {
+	margin:0px;
+	padding:0px;
+	
+	display:flex;
+	flex-flow:row wrap;
+	justify-content:center;
 
 	li {
-		list-style-type: none;
-		line-height: 33px;
+		list-style:none;
+		margin:5px;
 	}
-
-	li:hover {
-		color: $green;
-		transition: 0.3s ease-in;
-	}
-}
-
-.footerColumn-Left, .footerColumn-Mid { 
-	margin-right: 30px;
-}
-
-.footerColumn-Left { 
-	h3 { 
-		margin-bottom: 33px;
+	a {
+		font-size:1.4rem;
+		color:white;
+		transition:color 0.3s ease-in;
+		&:hover {
+			font-size:1.4rem;
+			color:#dade56;
+		}
 	}
 }
 
-.footerColumn-Mid, .footerColumn-Right {
-	h3 {
-		margin-bottom: 40px;
+
+
+/* information */
+ul.information {
+	display:inline-block;
+	margin:0px;
+	padding:0px;
+	li {
+		list-style:none;
+		margin:5px 0px;
+	}
+
+	a {
+		color:#8f8f8f;
 	}
 }
 
-.footerSocial { 
-	margin-top: 50px;
 
-	.fa { // font awesome icons
-	color: white;
-	padding: 0 7px;
-	}
+/* subscribe */
+form.subscribe {
+	text-align:center;
+}
 
-	.fa:hover {
-		color: $green;
-		transition: 0.3s ease-in;
+footer input[type=email], 
+input[type=submit] {
+	outline:0;
+	border:none;
+	display:inline-block;
+}
+
+footer input[type=email] {
+	border:2px solid rgba(0, 0, 0, 0.0);
+	width:100%;
+	margin:8px 0px;
+	padding:5px;
+	font-size:1.2rem;
+	text-align:center;
+	transition:all 0.3s;
+	&:focus,
+	&:hover {
+		border-color:#dade56;
+		background:#2b2b2b;
+		color:white;
 	}
 }
 
-.footerForm {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+
+input[type=submit] {
+	background:#dade56;
+	font-size:1rem;
+	font-weight:500;
+	text-transform:uppercase;
+	color:#2b2b2b;
+	padding:5px 30px;
+	transition:color 0.3s ease-in;
+	&:hover {
+		background:#80a05d;
+		color:white;
+	}
+}
+
+/* hi-res laptops and desktops */ 
+@media (max-width:1281px) { 
+
+}
+
+/* big landscape tablets, laptops, and desktops */ 
+@media (max-width:1025px) { 
+
+}
+
+
+/* tablet, landscape iPad, lo-res laptops ands desktops */ 
+@media (max-width:961px) { 
 	
-	input {
-		width: 100%;
-		padding: 7px;
-		margin: 20px 0 10px 0;
-		text-align: center;
-	}
-
-	input::placeholder {
-		color: #d1d1d1;
-	}
 }
 
+/* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 
+@media (max-width:641px) { 
 
-@media (max-width: 800px) {
-	footer {
-		background-image: none;
+	footer .wrapper {
+		width:80%;
+		margin:0 auto;
+		.footnote {
+			width:100%;
+			margin-bottom: 50px;
+			text-align: left;
+
+			h5 {
+				margin:0 0 25px 0;
+			}
+		}
 	}
 
-	.footerWrapper {
-		flex-direction: column;
-		padding: 60px 0;
+	form.subscribe {
+		text-align:left;
 	}
 
-	.footerColumn {
-		width: 100%;
-		padding: 40px;
+	ul.social {
+		justify-content:flex-start;
+		.fa {
+			font-size: 2rem;
+			margin-top: 30px;
+			margin-right: 30px;
+		}
 	}
+
 }
+
+/* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
+@media (max-width:481px) { 
+
+
+}
+
+/* smartphones, iPhone, portrait 480x320 phones */ 
+@media (max-width:320px) { 
+
+
+}
+
