--- a/dev/styles/partials/_welcome.scss
+++ b/dev/styles/partials/_welcome.scss
@@ -1,57 +1,104 @@
-.welcomeWrapper {
-	p {
-		color: $pgrey;
-		font-size: 0.9375rem;
-		text-align: center;
-		width: 90%;
-		margin: 0 auto;
-	}
-}
+// WELCOME TO FLOWIE GARDEN 
 
-.welcomeGrid {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+.welcome {
+	background: white;
 	text-align: center;
-}
 
-.welcomeColumn { 
-	width: 370px;
-	padding: 80px 0 160px 0;
+	.offer {
+		width:100%;
+		display:flex;
+		flex-flow:row wrap;
 
-	h3 {
-		text-transform: uppercase;
-		font-weight: 400;
-		font-size: 1.125rem;
-		padding: 5px 0;
-		color: $bggrey;
-	}
+		.offer-item {
+			width: calc(33.3% - 10px);
+			margin-right: 10px;
 
-	img {
-		width: 100%;
-	}
-}
+			&:last-child {
+				margin-right: 0px;
+			}
 
+			img {
+				width: 100%;
+				max-width: 300px;
+			}
 
-@media (max-width: 1200px) {
-	.welcomeColumn {
-		padding: 50px 0 80px 0;
+			a {
+				text-decoration: none;
+				text-transform: uppercase;
+				font-size: 1.2rem;
+				color: #2b2b2b;
+				transition: color 0.3s ease-in;
 
-		h3 {
-			font-size: 1rem;
+				&:hover {
+					color: #80a05d;
+				}
+			}
 		}
 	}
 }
 
 
-@media (max-width: 730px) {
-	.welcomeGrid {
-		flex-direction: column;
-		align-items: center;
-		padding-top: 30px;
+// MEDIA QUERIES
+
+/* hi-res laptops and desktops */ 
+@media (max-width:1281px) { 
+
+}
+
+/* big landscape tablets, laptops, and desktops */ 
+@media (max-width:1025px) { 
+
+}
+
+
+/* tablet, landscape iPad, lo-res laptops ands desktops */ 
+@media (max-width:961px) { 
+	
+}
+
+/* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 
+@media (max-width:641px) { 
+
+	.welcome {
+		background: white;
+		text-align: center;
+
+		.offer {
+			flex-flow: column wrap;
+
+			.offer-item {
+				width: 100%;
+				margin: 15px 0;
+				margin-right: 0;
+
+				img {
+					width:100%;
+				}
+				
+				a {
+					text-decoration:none;
+					text-transform:uppercase;
+					font-size:1.6rem;
+					color:#2b2b2b;
+					transition:color 0.3s ease-in;
+					&:hover {
+						color:#80a05d;
+					}
+				}
+			}
+		}
 	}
 
-	.welcomeColumn {
-		padding: 30px 0 30px 0;
-	}
+}
+
+/* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
+@media (max-width:481px) { 
+
+
+}
+
+/* smartphones, iPhone, portrait 480x320 phones */ 
+@media (max-width:320px) { 
+
+
 }
